1_4/app2/manifests/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: default
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: "witlab/ingress-training-app2:v0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          resources:
            {}
