1_4/app2/manifests/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: app2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: https
      protocol: TCP
      name: http
  selector:
    app: app2
